--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,11 @@
-platform :ios, '8.0'
+platform :ios, '12.0'
 
 use_frameworks!
 
 target 'Example' do
 
   pod 'LifetimeTracker', :path => '../'
+  pod 'LifetimeTrackerCore', :path => '../'
 
   target 'Example_Tests' do
     inherit! :search_paths
